--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
 	      </article>
         </aside>
 
-	    <aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>
+	     <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
+       <aside class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
 	      <figure><h1>01</h1></figure>
 	      <article>
@@ -210,7 +211,8 @@
 	      </article>
 	    </aside>
 
-	    <aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>
+	     <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
+       <aside class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
 	     <figure><h1>02</h1></figure>
 	      <article>
@@ -229,7 +231,8 @@
 	     </article>
 	    </aside>
 
-	    <aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>
+	     <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
+       <aside class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
 	      <figure><h1>03</h1></figure>
 	     <article>
@@ -248,7 +251,8 @@
 	</article>
 	</aside>
 
-	    <aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>
+	     <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
+       <aside class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
 	 <figure><h1>04</h1></figure>
 	<article>
