--- a/index.html
+++ b/index.html
@@ -211,8 +211,9 @@
 	      </article>
 	    </aside>
 
-	     <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
-       <aside class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+	    <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
+       <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+
 
 	     <figure><h1>02</h1></figure>
 	      <article>
@@ -231,8 +232,9 @@
 	     </article>
 	    </aside>
 
-	     <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
-       <aside class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+	    <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
+       <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+
 
 	      <figure><h1>03</h1></figure>
 	     <article>
@@ -251,8 +253,8 @@
 	</article>
 	</aside>
 
-	     <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
-       <aside class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+	    <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
+       <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
 	 <figure><h1>04</h1></figure>
 	<article>
