--- a/index.html
+++ b/index.html
@@ -192,8 +192,13 @@
 	      </article>
         </aside>
 
-	    <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
-       <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+   <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+         <article>
+             <p class="blanc">master juillet project 23/24 <br />
+             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+         </article>
 
 	      <figure><h1>01</h1></figure>
 	      <article>
@@ -211,8 +216,13 @@
 	      </article>
 	    </aside>
 
-	    <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
        <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+         <article>
+             <p class="blanc">master juillet project 23/24 <br />
+             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+         </article>
 
 
 	     <figure><h1>02</h1></figure>
@@ -232,8 +242,13 @@
 	     </article>
 	    </aside>
 
-	    <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
-       <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+   <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+         <article>
+             <p class="blanc">master juillet project 23/24 <br />
+             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+         </article>
 
 
 	      <figure><h1>03</h1></figure>
@@ -253,8 +268,13 @@
 	</article>
 	</aside>
 
-	    <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
-       <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+   <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+         <article>
+             <p class="blanc">master juillet project 23/24 <br />
+             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+         </article>
 
 	 <figure><h1>04</h1></figure>
 	<article>
