--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
         </aside>
 
    <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
-         <article>
-             <p class="blanc">master juillet project 23/24 <br />
+         <article class="blanc">
+             <p>master project 23/24 <br />
              <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
              <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
              <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
@@ -216,13 +216,13 @@
 	      </article>
 	    </aside>
 
-       <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
-         <article>
-             <p class="blanc">master juillet project 23/24 <br />
-             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
-         </article>
+      <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+            <article class="blanc">
+                <p>master project 23/24 <br />
+                <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+                <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+                <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+            </article>
 
 
 	     <figure><h1>02</h1></figure>
@@ -242,13 +242,13 @@
 	     </article>
 	    </aside>
 
-   <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
-         <article>
-             <p class="blanc">master juillet project 23/24 <br />
-             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
-         </article>
+      <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+            <article class="blanc">
+                <p>master project 23/24 <br />
+                <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+                <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+                <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+            </article>
 
 
 	      <figure><h1>03</h1></figure>
@@ -260,7 +260,7 @@
 </section>
 
 <section id="s-video"  class="tab_content">
-	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+	  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
 	 <figure><h1>04</h1></figure>
 	<article>
@@ -268,13 +268,13 @@
 	</article>
 	</aside>
 
-   <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
-         <article>
-             <p class="blanc">master juillet project 23/24 <br />
-             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
-         </article>
+  <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+        <article class="blanc">
+            <p>master project 23/24 <br />
+            <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+            <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+            <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+        </article>
 
 	 <figure><h1>04</h1></figure>
 	<article>
