--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
    <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
          <article class="blanc">
-             <p>master project 23/24 <br />
+             <p>master juillet project 23/24 <br />
              <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
              <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
              <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
@@ -216,12 +216,13 @@
 	    </aside>
 
       <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
-            <article class="blanc">
-                <p>master project 23/24 <br />
-                <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-                <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-                <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
-            </article>
+         <article class="blanc">
+             <p>master juillet project 23/24 <br />
+             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+         </article>
+
 
 
 	     <figure><h1>02</h1></figure>
@@ -242,12 +243,13 @@
 	    </aside>
 
       <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
-            <article class="blanc">
-                <p>master project 23/24 <br />
-                <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-                <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-                <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
-            </article>
+         <article class="blanc">
+             <p>master juillet project 23/24 <br />
+             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+         </article>
+
 
 
 	      <figure><h1>03</h1></figure>
@@ -268,12 +270,13 @@
 	</aside>
 
   <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
-        <article class="blanc">
-            <p>master project 23/24 <br />
-            <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-            <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-            <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
-        </article>
+         <article class="blanc">
+             <p>master juillet project 23/24 <br />
+             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+         </article>
+
 
 	 <figure><h1>04</h1></figure>
 	<article>
