--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 	<!--  test <script type="text/javascript">try{Typekit.load();}catch(e){}</script>-->
 	<!--  test <script type="text/javascript"src="http://code.google.com/p/css3-mediaqueries-js"></script>-->
 
-
 	<!-- TODO
 	      MASTER JUILLET PROJECT POESIES III
 	      Current project writing and production.
@@ -97,7 +96,44 @@
 		</aside>
 </section>
 
+  <!--
+<nav role="navigation" id="nav">
+  <ul class="tabs">
+    <li id="sign"><a style="display:none" href="#s-sign" id="signs" class="signs">
+      <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
+       xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+       x="0px" y="0px" width="22.095px" height="15.503px" viewBox="0 0 22.095 15.503" enable-background="new 0 0 22.095 15.503"
+       xml:space="preserve">
+        <g>
+          <g>
+            <polygon fill="#FFFFFF" points="11.095,7.206 4.326,0.272 0.095,4.504 11.089,15.502 22.095,4.486 17.864,0.255 		" />
+          </g>
+        </g>
+      </svg>
+      </a>
+      <a href="#s-sign" id="signers" class="signers">
+        <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
+         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+         x="0px" y="0px" width="24px" height="16.634px" viewBox="0 0 24 16.634" enable-background="new 0 0 24 16.634"
+         xml:space="preserve">
+          <g>
+            <g>
+              <polygon fill="#FFFFFF" points="19.385,16.634 24,12.018 11.993,0 0,11.998 4.616,16.614 12,9.05 		" />
+            </g>
+          </g>
+        </svg>
+    </a></li>
+	<li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">text</a>
+      <a href="#content" id="texts" class="texts">text</a></li>
+    <li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">sons</a>
+      <a href="#s-liter" id="liters" class="liters">sons</a></li>
+    <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">film</a>
+      <a href="#s-video" id="vids" class="vids">film</a></li>
+  </ul>
+  </nav>-->
 <section class="head" id="rules">
+
+
 		<header role="banner">
 			<ul id="video" class="request">
 				<li><a id="vim" class="vim">
@@ -110,7 +146,7 @@
 								<polygon fill="#FFFFFF" points="11.095,7.206 4.326,0.272 0.095,4.504 11.089,15.502 22.095,4.486 17.864,0.255 		" />
 							</g>
 						</g>
-					</svg>Preparatory video
+					</svg>
 				</a></li>
 				<li><a id="vims" class="vims">Hide this content</a></li>
 			</ul>
@@ -123,7 +159,7 @@
 
 <section class="inner">
 			<figure>
-				<p><img src="images/writings.svg" alt="Writings"></p>
+				<p><img src="images/writings.svg" alt="WRITINGS"></p><p><img src="images/filming.svg" alt="FILMING"></p><p><img src="images/say.svg" alt="SAY"></p>
                                 <p>Current project writing and production</p>
 				<p><a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a></p>
 			</figure>
@@ -145,40 +181,7 @@
 </section>
 
 <section id="section">
-	<nav role="navigation" id="nav">
-		<ul class="tabs">
-			<li id="sign"><a style="display:none" href="#s-sign" id="signs" class="signs">
-				<svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
-				 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-				 x="0px" y="0px" width="22.095px" height="15.503px" viewBox="0 0 22.095 15.503" enable-background="new 0 0 22.095 15.503"
-				 xml:space="preserve">
-					<g>
-						<g>
-							<polygon fill="#FFFFFF" points="11.095,7.206 4.326,0.272 0.095,4.504 11.089,15.502 22.095,4.486 17.864,0.255 		" />
-						</g>
-					</g>
-				</svg>
-				</a>
-				<a href="#s-sign" id="signers" class="signers">
-					<svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
-					 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-					 x="0px" y="0px" width="24px" height="16.634px" viewBox="0 0 24 16.634" enable-background="new 0 0 24 16.634"
-					 xml:space="preserve">
-						<g>
-							<g>
-								<polygon fill="#FFFFFF" points="19.385,16.634 24,12.018 11.993,0 0,11.998 4.616,16.614 12,9.05 		" />
-							</g>
-						</g>
-					</svg>
-			</a></li>
-			<li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">text</a>
-				<a href="#content" id="texts" class="texts">text</a></li>
-			<li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">sons</a>
-				<a href="#s-liter" id="liters" class="liters">sons</a></li>
-			<li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">film</a>
-				<a href="#s-video" id="vids" class="vids">film</a></li>
-		</ul>
-	  </nav>
+
 
 </section>
 <section id="s-sign">
@@ -194,7 +197,6 @@
  			    <h2>00</h2>
  	      </article>
             	<!--  <p><img class="motif" src="../images/bg-sign.png" alt="Sun"></p>-->
-
 <!--
        <article role="article" id="desc-s-sign" class="text">
            <h3>master juillet project - r3d, dcp... </h3>
