--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 
 <section id="switch-navigation">
 			<section class="inner"></section>
+
 		</section>
 </section>
 
@@ -202,18 +203,9 @@
  	      <article>
  			    <h2>00</h2>
  	      </article>
-            	<!--  <p><img class="motif" src="../images/bg-sign.png" alt="Sun"></p>-->
-<!--
-       <article role="article" id="desc-s-sign" class="text">
-           <h3>master juillet project - r3d, dcp... </h3>
-           <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
-           </p>
-           <h3>rushes</h3>
-           <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>-->
-       </article>
      </aside>
     </aside>
-   <aside id="sec-s-sign" class="page"><div><!--<img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun">--></div>
+   <aside id="sec-s-sign" class="page">
 
      <figure>
        <h1>01</h1>
@@ -280,19 +272,9 @@
     <article>
       <h2>1.2</h2>
     </article>
-          <!--  <p><img class="motif" src="../images/bg-sign.png" alt="Sun"></p>-->
-
-<!--
-   <article role="article" id="desc-s-sign" class="text">
-       <h3>master juillet project - r3d, dcp... </h3>
-       <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
-       </p>
-       <h3>rushes</h3>
-       <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>-->
-   </article>
  </aside>
 </aside>
-<aside id="sec-s-sign" class="page"><div><!--<img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun">--></div>
+<aside id="sec-s-sign" class="page"><div></div>
 
  <figure>
    <h1>1.2</h1>
@@ -302,19 +284,8 @@
  </article>
 
     <article role="article" id="desc-s-sign" class="text">
-        <h3>master juillet project - r3d, dcp... </h3>
-        <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
-        </p>
-        <h3>rushes</h3>
-        <p><!--<img class="motif" src="images/motif.jpg" alt="Sun">--></p>
     </article>
      <article role="article" class="blanc">
-         <h4>master juillet project 23/25</h4>
-         <p>
-         <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-         <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-         <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
-         </p>
      </article>
 </aside>
 <section id="s-signB">
@@ -326,7 +297,6 @@
       <article>
         <h2>1.2</h2>
       <article>
-        <!-- <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>-->
         <article role="article" id="desc-s-sign" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
 
     </aside>
@@ -358,20 +328,9 @@
     <article>
       <h2>1.3</h2>
     </article>
-          <!--  <p><img class="motif" src="../images/bg-sign.png" alt="Sun"></p>-->
-
-<!--
-   <article role="article" id="desc-s-sign" class="text">
-       <h3>master juillet project - r3d, dcp... </h3>
-       <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
-       </p>
-       <h3>rushes</h3>
-       <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>-->
-   </article>
  </aside>
 </aside>
-<aside id="sec-s-sign" class="page"><div><!--<img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun">--></div>
-
+<aside id="sec-s-sign" class="page">
  <figure>
    <h1>1.3</h1>
  </figure>
@@ -380,19 +339,8 @@
  </article>
 
     <article role="article" id="desc-s-sign" class="text">
-        <h3>master juillet project - r3d, dcp... </h3>
-        <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
-        </p>
-        <h3>rushes</h3>
-        <p><!--<img class="motif" src="images/motif.jpg" alt="Sun">--></p>
     </article>
      <article role="article" class="blanc">
-         <h4>master juillet project 23/25</h4>
-         <p>
-         <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-         <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-         <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
-         </p>
      </article>
 </aside>
 <section id="s-signC">
@@ -404,8 +352,7 @@
       <article>
         <h2>1.3</h2>
       <article>
-        <!-- <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>-->
-        <article role="article" id="desc-s-sign" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
+        <article role="article" id="desc-s-sign" class="text"></article>
 
     </aside>
 
@@ -436,15 +383,6 @@
     <article>
       <h2>1.4</h2>
     </article>
-          <!--  <p><img class="motif" src="../images/bg-sign.png" alt="Sun"></p>-->
-
-<!--
-   <article role="article" id="desc-s-sign" class="text">
-       <h3>master juillet project - r3d, dcp... </h3>
-       <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
-       </p>
-       <h3>rushes</h3>
-       <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>-->
    </article>
  </aside>
 </aside>
@@ -458,19 +396,8 @@
  </article>
 
     <article role="article" id="desc-s-sign" class="text">
-        <h3>master juillet project - r3d, dcp... </h3>
-        <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
-        </p>
-        <h3>rushes</h3>
-        <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>
     </article>
      <article role="article" class="blanc">
-         <h4>master juillet project 23/25</h4>
-         <p>
-         <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-         <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-         <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
-         </p>
      </article>
 </aside>
 <section id="s-signD">
@@ -482,8 +409,7 @@
       <article>
         <h2>1.4</h2>
       <article>
-        <!-- <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>-->
-        <article role="article" id="desc-s-sign" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
+        <article role="article" id="desc-s-sign" class="text"></article>
 
     </aside>
 
